# tree-sitter-imp

./: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.txt  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_imp/: __init__.py
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignments.txt  binary_expressions.txt  identifiers.txt  if_expressions.txt  multiple_expressions.txt  nested_expressions.txt  seq_expressions.txt  values.txt  while_expressions.txt
