[package]
authors      = [ "Caleb Fringer" ]
autoexamples = false
categories   = [ "parser-implementations", "parsing", "text-editors" ]
description  = "An impy little language"
edition      = "2024"
keywords     = [ "incremental", "parsing", "tree-sitter", "imp" ]
license      = "GPL-3.0-or-later"
name         = "tree-sitter-imp"
readme       = "README.md"
repository   = "https://github.com/caleb-fringer/tree-sitter-imp"
version      = "0.1.0"

build   = "bindings/rust/build.rs"
include = [ "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json", "/LICENSE" ]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.27.0"
