[build-system]
build-backend = "setuptools.build_meta"
requires      = [ "setuptools>=62.4.0", "wheel" ]

[project]
authors = [ { email = "PARSER_AUTHOR_EMAIL", name = "Caleb Fringer" } ]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
description = "An impy little language"
keywords = [ "incremental", "parsing", "tree-sitter", "imp" ]
license.text = "GPL-3.0-or-later"
name = "tree-sitter-imp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
Funding  = ""
Homepage = "https://github.com/caleb-fringer/tree-sitter-imp"

[project.optional-dependencies]
core = [ "tree-sitter~=0.24" ]

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"
